Fixes for deployment of apis webapp

--- a/utest-apis-dist/src/main/resources/puppet/modules/apache2_mod_jk/templates/jk.conf.erb
+++ b/utest-apis-dist/src/main/resources/puppet/modules/apache2_mod_jk/templates/jk.conf.erb
@@ -85,7 +85,7 @@
     # that gets reloaded automatically after changes
     # (with a default latency of 1 minute),
     # you can define the name of the file here.
-    # JkMountFile conf/extra/uriworkermap.properties
+    JkMountFile <%= uriworkermap_properties_file %>
 
     # Example for Mounting a context to the worker "balancer"
     # The URL syntax "a|b" instantiates two mounts at once,
