--- a/utest-apis-dist/src/main/resources/puppet/modules/tomcat/templates/log4j.properties.erb
+++ b/utest-apis-dist/src/main/resources/puppet/modules/tomcat/templates/log4j.properties.erb
@@ -1,6 +1,7 @@
 log4j.rootLogger=INFO, SYSLOG
 log4j.appender.SYSLOG=org.apache.log4j.net.SyslogAppender
 log4j.appender.SYSLOG.syslogHost=127.0.0.1
+log4j.appender.SYSLOG.header=true
 log4j.appender.SYSLOG.layout=org.apache.log4j.PatternLayout
-log4j.appender.SYSLOG.layout.conversionPattern=%t [%-5p]: [%t] %c{2}: %m%n
+log4j.appender.SYSLOG.layout.conversionPattern=[%-5p]: [%t] %c{2}: %m%n
 log4j.appender.SYSLOG.Facility=LOCAL3
