--- a/utest-apis-dist/src/main/resources/puppet/modules/apache2_mod_jk/templates/vhost.conf.erb
+++ b/utest-apis-dist/src/main/resources/puppet/modules/apache2_mod_jk/templates/vhost.conf.erb
@@ -22,7 +22,7 @@
          allow from all
      </Directory>
      
-     LogLevel info
+     LogLevel error
      CustomLog "|/usr/bin/logger -i -tapache2 -plocal1.info" combined
      ErrorLog syslog:local2
 
