--- a/utest-apis-dist/src/main/resources/puppet/modules/tomcat/templates/server.xml.erb
+++ b/utest-apis-dist/src/main/resources/puppet/modules/tomcat/templates/server.xml.erb
@@ -39,6 +39,10 @@
 	       protocol="AJP/1.3" 
 	       executor="tomcatThreadPool"/>
 
+    <Connector port="8080" 
+	       protocol="HTTP/1.1" 
+	       executor="tomcatThreadPool"/>
+
     <Engine name="Catalina" defaultHost="localhost" jvmRoute="<%= jvm_route %>">
 
       <Host name="localhost"
