Added 404 handing to webapp and apache; added logging configuration to suppress log output from jersey; fixed redirect url for voltrondev client to match the path to the actual service

--- a/utest-apis-dist/src/main/resources/puppet/modules/apache2_mod_jk/templates/vhost.conf.erb
+++ b/utest-apis-dist/src/main/resources/puppet/modules/apache2_mod_jk/templates/vhost.conf.erb
@@ -17,6 +17,8 @@ ServerTokens Prod
      SSLCertificateChainFile /etc/apache2/ssl/DigiCertCA.crt
      
      DocumentRoot <%= document_root %>
+
+     ErrorDocument 404 http://utest.com
      
      <Directory <%= document_root %>>
          Options Indexes FollowSymLinks MultiViews
