--- a/utest-apis-dist/src/main/resources/puppet/modules/apis/templates/apis-logback.xml.erb
+++ b/utest-apis-dist/src/main/resources/puppet/modules/apis/templates/apis-logback.xml.erb
@@ -37,6 +37,10 @@
         <level value="warn"/>
     </logger>
 
+    <logger name="com"
+        <level value="error">
+    </logger>
+
     <root level="info">
         <appender-ref ref="SYSLOG"/>
     </root>
