--- a/utest-apis-dist/src/main/resources/puppet/modules/apis/templates/apis-logback.xml.erb
+++ b/utest-apis-dist/src/main/resources/puppet/modules/apis/templates/apis-logback.xml.erb
@@ -37,7 +37,7 @@
         <level value="warn"/>
     </logger>
 
-    <logger name="com"
+    <logger name="com">
         <level value="error">
     </logger>
 
