Fixed another typo

--- a/utest-apis-dist/src/main/resources/puppet/modules/apis/templates/apis-logback.xml.erb
+++ b/utest-apis-dist/src/main/resources/puppet/modules/apis/templates/apis-logback.xml.erb
@@ -38,7 +38,7 @@
     </logger>
 
     <logger name="com">
-        <level value="error">
+        <level value="error"/>
     </logger>
 
     <root level="info">
